--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <div id="nav-close" class="fas fa-times"></div>
         <a href="index.html">home</a>
         <a href="adventure.html">Adventure</a>
-        <a href="http://127.0.0.1:5502/index.html#event">Packages</a>
+        <a href="index.html#event">Packages</a>
         <a href="map.html">map</a>
         <a href="blogs.html">blogs</a>
         <a href="events.html">Events</a>
